removed unused components and finished listing and filtering functionality

--- a/src/components/JobCard.module.css
+++ b/src/components/JobCard.module.css
@@ -1,2 +1,7 @@
-.container {
-}
+/* Mobile design */
+/* 
+    flex direction column
+    image resized smaller
+    minus margin top to move img on top of container
+    flex to wrap
+*/
