--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap');
+
 :root {
   --light-gray-cyan-bg: hsl(180, 52%, 96%);
   --light-gray-cyan-filter: hsl(180, 31%, 95%);
@@ -13,4 +15,16 @@
 
 body {
   background-color: var(--light-gray-cyan-bg);
+  font-family: 'Spartan', sans-serif;
+}
+
+.header-desktop {
+  display: none;
+}
+
+/* Screens bigger than mobile */
+@media only screen and (max-width: 375px) {
+  .header-mobile {
+    display: none;
+  }
 }
