--- a/src/components/JobCard.module.css
+++ b/src/components/JobCard.module.css
@@ -1,7 +1,90 @@
-/* Mobile design */
-/* 
-    flex direction column
-    image resized smaller
-    minus margin top to move img on top of container
-    flex to wrap
-*/
+:root {
+  --light-gray-cyan-bg: hsl(180, 52%, 96%);
+  --light-gray-cyan-filter: hsl(180, 31%, 95%);
+  --dark-gray-cyan: hsl(180, 8%, 52%);
+  --v-dark-gray-cyan: hsl(180, 14%, 20%);
+  --desat-dark-cyan: hsl(180, 29%, 50%);
+}
+
+.flexContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: white;
+  width: 88%;
+  margin: 5% 0;
+  box-shadow: 0px 8px 19px -3px rgba(96, 165, 165, 0.5);
+  /* display */
+  padding: 5%;
+  border-radius: 10px;
+}
+
+.featured {
+  border-left: 5px solid var(--desat-dark-cyan);
+}
+
+.companyImg {
+  margin-top: -5em;
+  margin-bottom: 0.5em;
+  width: 15%;
+}
+
+.company {
+  font-weight: 700;
+  margin-right: 1em;
+  color: var(--desat-dark-cyan);
+}
+
+.position {
+  color: var(--v-dark-gray-cyan);
+  margin: 1em 0;
+  font-size: 15px;
+}
+
+.new {
+  background: var(--desat-dark-cyan);
+  margin-right: 0.7em;
+}
+
+.newFeatured {
+  color: white;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 700;
+  border: transparent;
+  border-radius: 15px;
+  padding: 4px 8px;
+}
+
+.featuredJob {
+  background: var(--v-dark-gray-cyan);
+}
+
+.details {
+  color: var(--dark-gray-cyan);
+  font-size: 14px;
+  margin: 1em 0;
+}
+
+.divider {
+  margin-bottom: 0.5em;
+}
+
+/* container */
+.keywords {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* indiv. span */
+.keywordBtn {
+  cursor: pointer;
+  background: var(--light-gray-cyan-bg);
+  color: var(--desat-dark-cyan);
+  font-weight: 700;
+  font-size: 15px;
+  border: none;
+  margin: 0.5em 1em;
+  margin-left: -1px;
+  padding: 9px;
+}
