--- a/src/components/JobCard.module.css
+++ b/src/components/JobCard.module.css
@@ -12,10 +12,10 @@
   flex-wrap: wrap;
   background: white;
   width: 88%;
-  margin: 5% 0;
+  margin: 1.5em 0;
   box-shadow: 0px 8px 19px -3px rgba(96, 165, 165, 0.5);
   /* display */
-  padding: 5%;
+  padding: 1.4em;
   border-radius: 10px;
 }
 
@@ -39,6 +39,7 @@
   color: var(--v-dark-gray-cyan);
   margin: 1em 0;
   font-size: 15px;
+  font-weight: 700;
 }
 
 .new {
